--- a/fling.css
+++ b/fling.css
@@ -69,28 +69,14 @@ footer {
 	text-align: center;
 }
 
-#upBtn {
+#intro {
 	position: absolute;
-	left: 480px;
-	top: 130px;
-}
-
-#downBtn {
-	position: absolute;
-	top: 200px;
-	left: 480px;
-}
-
-#leftBtn {
-	position: absolute;
-	top: 200px;
-	left: 410px;
-}
-
-#rightBtn {
-	position: absolute;
-	top: 200px;
-	left: 550px;
+	left: 420px;
+	top: 60px;
+	width: 260px;
+	font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+	font-size:18px;
+	color: grey;
 }
 
 #gameComplete {
@@ -140,16 +126,6 @@ footer {
 	background: #EEE;
 	border: thin solid #aaa;
 	box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
-}
-
-#upBtn, #downBtn, #leftBtn, #rightBtn {
-	padding: 20px;
-	width: 60px;
-	height: 60px;
-	text-decoration: none;
-	border: none;
-	border-radius: 4px;
-	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.7);
 }
 
 #undoBtn, #menuBtn ,#puzzleScore {
