--- a/fling.css
+++ b/fling.css
@@ -2,151 +2,139 @@
 html,body { height: 100%; width: 100%; }
 
 body {
-	background: #DDD;
-	font-family:Verdana, Arial, sans-serif;
+  background: #F7EDED;
+  font-family:Verdana, Arial, sans-serif;
 }
+
+h3 {
+  margin: 0 0 10px 0;
+  padding: 10px 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #AC993A;
+  border-bottom: 1px solid #AC993A;
+}
+
 a {
-	color: #fff;
-	text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 a.button {
-	text-align: center;
-	background: #185da8;
-	border-radius: 5px;
-	display: block;
-	font-family:Verdana, Arial, sans-serif;
-	font-size: 32px;
-	margin: 40px 0 0 170px;
-	padding: 10px;
-	width: 200px;
-	transition: all 0.6s ease-in 0.6s;
+  text-align: center;
+  background: #185da8;
+  border-radius: 5px;
+  display: block;
+  font-family: Verdana, Arial, sans-serif;
+  font-size: 24px;
+  margin: 20px 0 0 170px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.6s ease-in 0.6s;
 }
 
 a.button:hover {
-	background: #2488f5;
-	color: #fff;
-	text-decoration: none;
-	transition: all 1.2s ease-in 0.2s;
+  background: #2488f5;
+  color: #fff;
+  text-decoration: none;
+  transition: all 1.2s ease-in 0.2s;
 }
 
-footer {
-	margin-left: 24px;
+
+#container {
+  width: 900px;
+  margin: 40px auto;
 }
 
-#gameState {
-	margin-left: 24px;
-	margin-top: 4px;
-	padding-top: 4px;
-	width: 402px;
-	height: 40px;
-	background: rgb(133, 17, 17);
-	color: orange;
-	text-align: center;
-	box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.9);
+#leftContainer {
+  float: left;
+  width: 460px;
 }
 
-#gameUI {
-	position: absolute;
-	margin-left: 24px;
-	width: 402px;
+#GameIntro {
+  width: 440px;
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+  font-size: 18px;
+  color: grey;
 }
 
-#gameIntro {
-	margin-top: 3px;
-	width: 390px;
-	height: 360px;
-	padding: 20px 5px;
-	background: black;
-	border: thin solid black;
-	font-family:AR CHRISTY;
-	font-size:16px;
-	color: orange;
-	text-align: center;
-}
-
-#intro {
-	position: absolute;
-	left: 420px;
-	top: 60px;
-	width: 260px;
-	font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
-	font-size:18px;
-	color: grey;
-}
-
-#gameComplete {
-	position: absolute;
-	margin-top: 3px;
-	width: 402px;
-	height: 402px;
-	background: rgba(0, 0, 0, 0);
-	text-align: center;
-}
-
-#gameEndShow {
-	width: 402px;
-	height: 402px;
-	background: black;
-	color: white;
-	font-size: 18px;
-}
-
-#scoreShow {
-	color: #CC0033;
-	font-size: 48px;
-}
-
-#highScoreList {
-	padding-top: 10px;
-	padding-left: 120px;
-	text-align: left;
-}
-
-#nextBtn {
-	margin-left: 180px;
-	margin-top: 160px;
-	padding: 20px;
-	background: rgba(0, 0, 0, 0.4);
-	color: orange;
-	font-size: 32px;
-	text-decoration: none;
-	border: none;
-	border-radius: 8px;
-	box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.7);
+header {
+  float: left;
+  margin-top: 4px;
+  padding-top: 4px;
+  width: 402px;
+  height: 40px;
+  background: rgb(133, 17, 17);
+  color: orange;
+  text-align: center;
+  border-radius: 2px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.9);
 }
 
 #canvas {
-	margin-left: 24px;
-	margin-top: 3px;
-	background: #EEE;
-	border: thin solid #aaa;
-	box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
+  float: left;
+  margin-top: 3px;
+  background: #EEE;
+  border: thin solid #aaa;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
 }
 
-#undoBtn, #menuBtn ,#puzzleScore {
-	padding: 4px;
-	background:rgba(255,255,255,0.2);
-	color: rgba(0, 0, 0, 0.4);
-	border:none;
-	border-radius:10px;
-	font-size:24px;
-	box-shadow:rgba(0,0,0,0.2) 4px 4px 0px 0px;
+#gameComplete {
+  position: absolute;
+  top: 140px;
+  width: 840px;
+  height: 120px;
+  background: rgba(0, 0, 0, 0);
+  text-align: center;
 }
 
 #puzzleScore {
-	position: absolute;
-	left: 130px;
-	top: 460px;
-	text-align: center;
-	font-size:18px;
+  width: 360px;
+  margin-left: 470px;
+  padding: 4px;
+  font-size: 24px;
+  background: rgba(255,255,255,0.2);
+  color: rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  border: thin solid #aaa;
 }
 
-#undoBtn {
-	position: absolute;
-	margin-left: 260px;
+#nextBtn {
+  margin-left: 470px;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.4);
+  color: orange;
+  font-size: 32px;
+  text-decoration: none;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.7);
+}
+
+#gameEnd {
+  float: left;
+  margin-top: 3px;
+  width: 402px;
+  height: 402px;
+  background: black;
+  color: white;
+  font-size: 18px;
+  text-align: center;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
+}
+
+#scoreShow {
+  color: #CC0033;
+  font-size: 48px;
+  text-align: center;
+}
+
+#highScoreList {
+  padding-top: 10px;
+  padding-left: 120px;
+  text-align: left;
 }
